--- a/app/views/academy/workshops/_form.html.erb
+++ b/app/views/academy/workshops/_form.html.erb
@@ -68,7 +68,7 @@
 
 
     <div class="control-group">
-      <%= f.label :description, "Descrição" ,:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="academy_workshop_description"></label>
+      <%= f.label :description, "Descrição" ,:class=>"control-label" %>
       <div class="controls">
         <%= f.text_area :description,:placeholder => "Descreva o workshop...",:class=>"form-control",:id => "some-textarea",:rows => "5", :rel=>"tooltip",:title=>"Escreva de forma clara e não utilize demasiada pontuação ou termos repetidos." %>
       </div>
