--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -14,7 +14,8 @@
       <% if @subscribed_plans.include? plan %>
       <div class="cnrflash">
         <div class="cnrflash-inner">
-          <span class="cnrflash-label">(<%= @subscribed_plans.where(:id => plan.id).count %>)</br>SUBSCRITO</span>
+          <% contador = @subscribed_plans.where(:id => plan.id).count %>
+          <span class="cnrflash-label"><% if contador > 1%>(<%= contador %>)</br><% end %>SUBSCRITO</span>
         </div>
       </div>
       <% end %>
