--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -71,18 +71,18 @@
           <div class="carousel-inner">
 
             <% if num_img == 0 %>
-              <div class="item active">
+              <div class="item active" id="divImg">
                 <img src="/assets/defaultAdPic.png" alt="...">
               </div>
             <% else %>
               <% i=0 %>
               <% while (i < num_img) do %>
                 <% if i == 0 %>
-                  <div class="item active">
+                  <div class="item active" id="divImg">
                     <img src="<%= @ad.ad_images[i].image.url %>" alt="...">
                   </div>
                 <% else %>
-                  <div class="item">
+                  <div class="item" id="divImg">
                     <img src="<%= @ad.ad_images[i].image.url %>" alt="...">
                   </div>
                 <% end %>
