[DESIGN FEATURE]CSS - Eventos/Workshops[Hélder Abreu]

--- a/app/views/academy/workshops/new.html.erb
+++ b/app/views/academy/workshops/new.html.erb
@@ -7,11 +7,11 @@
   </li>
 </ol>
 
-<div class="panel">
+<div class="panel panel-default">
   <div class="panel-heading border-header">
     <h3 class="panel-title">Novo Workshop</h3>
   </div>
-  <div class="panel-body">
+  <div class="panel-body" id="edit-workshop">
 
     <%= render 'form' %>
 
