--- a/app/assets/stylesheets/event/events.css.scss
+++ b/app/assets/stylesheets/event/events.css.scss
@@ -6,7 +6,7 @@
 	width: 100% !important;
 }
 
-#title-approval {
+#title-approval, #event-title {
 	margin: 30px 0 5px 0;
 }
 
@@ -23,9 +23,13 @@
 }
 
 #event-image {
-	margin-top: 5px;
+	margin: 5px 0 5px 0;
 }
 
 .event-begin {
 	margin-right: 15px;
+}
+
+.sectin-box {
+	height: 100%;
 }
