Posição de follow button

--- a/app/views/layouts/userslayouts.html.erb
+++ b/app/views/layouts/userslayouts.html.erb
@@ -42,15 +42,22 @@
             <li class="active">
               <%= link_to "Perfil".html_safe , user_path(current_user.id), :class => "fa fa-user" %>
             </li>
-
-            <li>
-              <%= link_to "Editar Perfil".html_safe , edit_user_registration_path(), :class => "fa fa-edit" %>
-            </li>
+            <% if (current_user && @user.id == current_user.id) %>
+              <li>
+                <%= link_to "Editar Perfil".html_safe , edit_user_registration_path(), :class => "fa fa-edit" %>
+              </li>
+            <% end %>
             <li> 
               <%= link_to " Os Meus Anúncios".html_safe , myads_user_path(current_user.id), :class => "fa fa-calendar" %> <span class="label label-danger pull-right r-activity"><%= @user.counter_ads %></span>
             </li>
           </ul>
         </section>
+        
+        <% if (current_user && @user.id != current_user.id) %>
+        
+            <button class="followToggle btn btn-primary" value="<%= @user.id %>"><% if current_user.is_following(@user) %>unfollow<% else %>follow<% end %></button>
+    
+        <% end %>
       </aside>
 
     <%= yield %>
