--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -378,101 +378,6 @@ border-bottom-right-radius: 4px;
 
 
 
-/* AUTOCOmplete */
-.twitter-typeahead{
-  width:100%;
-  top: 10px;
-}
-
-.twitter-typeahead .tt-query,
-.twitter-typeahead .tt-hint {
-  /*margin-bottom: 0;*/
-}
-.tt-dropdown-menu {
-  min-width: 160px;
-  margin-top: 2px;
-  padding: 5px 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0,0,0,.2);
-  *border-right-width: 2px;
-  *border-bottom-width: 2px;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
-  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-          box-shadow: 0 5px 10px rgba(0,0,0,.2);
-  -webkit-background-clip: padding-box;
-     -moz-background-clip: padding;
-          background-clip: padding-box;
-  width:100%;
-}
-
-.tt-suggestion {
-  display: block;
-  padding: 3px 20px;
-}
-
-.tt-suggestion.tt-is-under-cursor {
-  color: #fff;
-  background-color: #0081c2;
-  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0)
-}
-
-.tt-suggestion.tt-is-under-cursor a {
-  color: #fff;
-}
-
-.tt-suggestion p {
-  margin: 0;
-}
-
-.twitter-typeahead .tt-hint {
-    display: block;
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.428571429;
-    border: 1px solid transparent;
-    border-radius:4px;
-}
-.twitter-typeahead .hint-small {
-    height: 30px;
-    padding: 5px 10px;
-    font-size: 12px;
-    border-radius: 3px;
-    line-height: 1.5;
-}
-.twitter-typeahead .hint-large {
-    height: 45px;
-    padding: 10px 16px;
-    font-size: 18px;
-    border-radius: 6px;
-    line-height: 1.33;
-}
-
-.twitter-typeahead {
-     width: 100%;
-}
-.tt-dropdown-menu {
-     width: 100%;
-}
-.tt-hint {
-     width: 100%;
-}
-
-#hearts { color: #FF0000;}
-#hearts-existing { color: #87bad7;}
-
-
-
 /******MESSAGES BOX *********/
 .chat
 {
@@ -647,10 +552,11 @@ border-color: #eff2f7;
 
 
 /******AUTOCOMPLETE**********/
-.typeahead_wrapper { display: block; height: 30px; }
+ .typeahead { z-index :1051;}
+.typeahead_wrapper { display: block; height: 30px; z-index:9999; }
 .typeahead_photo { float: left; max-width: 40px; max-height: 40px; margin-right: 5px; }
 .typeahead_labels { float: left; height: 30px; }
-.typeahead_primary { font-weight: bold; }
+.typeahead_primary { font-weight: bold;z-index:9999; }
 .typeahead_secondary { font-size: .8em; margin-top: -5px; }
 
 
