--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,28 +17,16 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
     <ul class="nav navbar-nav navbar-right">
-
-      <!-- SEARCH -->
-      <li class="dropdown messages-dropdown" >
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-search" id="fa-search"></i><b class="caret" id="dropCarret"></b> </a>
-        <ul class="dropdown-menu">
-          <li class="container" id="searchBox" role="search">
-
-            <%= form_tag "/search", :method => "get",:html =>{ :class=>"input-group", :id => "input-groupBox"} do %>
-              <%= text_field_tag :search, params[:search],:class => "form-control typeahead" ,:style=>"vertical-align: center;",:autocomplete => "off"  %>
+      
+      <%= form_tag "/ads", :method => "get",:class=>"navbar-form navbar-left input-group", :id => "search" do %>
+              <%= text_field_tag :search, params[:search],:class => "form-control typeahead" ,:style=>"vertical-align: center;",:autocomplete => "off",:id=>"search_query"  %>
              <input type="hidden" class="span1" name="IdControl" id="IdControl" value="" />
 
               <span class="input-group-btn">
                 <input value="Pesquisar" type="hidden" class="btn btn-default" id="omnisearch-btn" >
               </span>
-            <% end %>
-          </li>
-        </ul>
-      </li>
+       <% end %>
       <!-- END SEARCH -->
-
-      <!-- END SEARCH -->
-       
 
 
       <!-- NOTIFICACOES -->
@@ -167,7 +155,8 @@
                                 title: item.title,
                                 category: item.category,
                                 tipo: item.tipo,
-                                img: item.img
+                                img: item.img,
+                                link: item.link
                            }
                            labels.push(item.title)
 
@@ -194,9 +183,11 @@
                  updater: function ( item ) {
                     //save the id value into the hidden field
                     $( "#IdControl" ).val( mapped[item].id );
+                    //alert(mapped[item].id)
+                    window.location.href = mapped[item].link;
                     //return the string you want to go into the textbox (the name)
                     //alert(item)
-                    return item;
+                    //return item;
                 }
               });
 
