--- a/app/assets/stylesheets/ads.css
+++ b/app/assets/stylesheets/ads.css
@@ -13,6 +13,8 @@ body {
 #divImg img {
 	padding-left: 25px;
 	padding-right: 25px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .carousel-control.right {
