--- a/app/views/admin/academy/tutorials/index.html.erb
+++ b/app/views/admin/academy/tutorials/index.html.erb
@@ -21,7 +21,7 @@
 				<td><%= uap_tutorial.id %></td>
 				<td><%= uap_tutorial.user.name %></td>
 				<td><%= uap_tutorial.title %></td>
-				<td><%= uap_tutorial.rapid_description %></td>
+				<td><%= uap_tutorial.rapid_description.truncate(25) %></td>
 				<td><%= link_to 'Ver', admin_academy_tutorial_path(uap_tutorial.id) %> </td>
 				<td><%= link_to 'Aprovar' , admin_aprove_tutorial_path(:id_aprove => uap_tutorial.id)%></td>
 				<td><%= link_to 'Apagar', uap_tutorial, method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
@@ -59,7 +59,7 @@
 				<td><%= ap_tutorial.id %></td>
 				<td><%= ap_tutorial.user.name %></td>
 				<td><%= ap_tutorial.title %></td>
-				<td><%= ap_tutorial.rapid_description %></td>
+				<td><%= ap_tutorial.rapid_description.truncate(25) %></td>
 				<td><%= link_to 'Ver', admin_academy_tutorial_path(ap_tutorial.id) %> </td>
 				<td><%= link_to 'Editar',edit_admin_academy_tutorial_path(ap_tutorial.id) %> </td>
 				 <td><%= link_to 'Apagar', ap_tutorial, method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
