--- a/app/views/admin/event/events/index.html.erb
+++ b/app/views/admin/event/events/index.html.erb
@@ -27,10 +27,10 @@
     <% @unaproved_events.each do |event| %>
       <tr>
         <td><%= event.id %></td>
-        <td><%= event.start_day %></td>
-        <td><%= event.end_day %></td>
+        <td><%= I18n.l event.start_day ,:format => :time %></td>
+        <td><%= I18n.l event.end_day ,:format => :time %></td>
         <td><%= event.title %></td>
-        <td><%= event.description %></td>
+        <td><%= event.description.truncate(25) %></td>
         <td><%= event.city.city %></td>
         <td><%= event.user_id %> / <%= event.user.name %></td>
         <td><%= link_to 'Ver', [:admin, event] %></td>
@@ -74,10 +74,10 @@
     <% @aproved_events.each do |event| %>
       <tr>
         <td><%= event.id %></td>
-        <td><%= event.start_day %></td>
-        <td><%= event.end_day %></td>
+        <td><%= I18n.l event.start_day ,:format => :time %></td>
+        <td><%= I18n.l event.end_day ,:format => :time %></td>
         <td><%= event.title %></td>
-        <td><%= event.description %></td>
+        <td><%= event.description.truncate(25) %></td>
         <td><%= event.city.city %></td>
         <td><%= event.user_id %> / <%= event.user.name %></td>
         <td><%= link_to 'Ver', [:admin, event] %></td>
