--- a/app/views/admin/academy/workshops/index.html.erb
+++ b/app/views/admin/academy/workshops/index.html.erb
@@ -23,10 +23,10 @@
         <td><%= uap_workshop.id %></td>
         <td><%= uap_workshop.user.name %></td>
         <td><%= uap_workshop.title %></td>
-        <td><%= uap_workshop.description %></td>
+        <td><%= uap_workshop.description.truncate(25) %></td>
         <td><%= uap_workshop.available_slots %></td>
         <td><%= uap_workshop.slots_taken %></td>
-        <td><%= uap_workshop.date %></td>
+        <td><%= I18n.l uap_workshop.date ,:format => :time %></td>
         <td><%= link_to 'Ver', admin_academy_tutorial_path(uap_workshop.id) %> </td>
         <td><%= link_to 'Aprovar' , admin_aprove_workshop_path(:id_aprove => uap_workshop.id)%></td>
         <td><%= link_to 'Apagar', uap_workshop, method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
@@ -67,10 +67,10 @@
         <td><%= ap_workshop.id %></td>
         <td><%= ap_workshop.user.name %></td>
         <td><%= ap_workshop.title %></td>
-        <td><%= ap_workshop.description %></td>
+        <td><%= ap_workshop.description.truncate(25) %></td>
         <td><%= ap_workshop.available_slots %></td>
         <td><%= ap_workshop.slots_taken %></td>
-        <td><%= ap_workshop.date %></td>
+        <td><%= I18n.l ap_workshop.date ,:format => :time %></td>
         <td><%= link_to 'Ver', admin_academy_workshop_path(ap_workshop.id) %> </td>
         <td><%= link_to 'Desaprovar', admin_unaprove_workshop_path(:id_aprove => ap_workshop.id) %></td>
          <td><%= link_to 'Apagar', ap_workshop, method: :delete, data: { confirm: 'Tem a certeza?' } %></td>
