--- a/app/assets/stylesheets/event/events.css.scss
+++ b/app/assets/stylesheets/event/events.css.scss
@@ -33,3 +33,22 @@
 .sectin-box {
 	height: 100%;
 }
+
+#edit-event {
+	margin: 10px 10px -10px 10px;
+}
+
+#event-begin-date {
+	margin-left: 0;
+	padding-left: 0;
+}
+
+#event-city {
+	margin-right: 0;
+	padding-right: 0;
+	height: 100%;
+}
+
+#event-cities {
+	height: 34px !important;
+}
