--- a/app/assets/stylesheets/academy/workshops.css
+++ b/app/assets/stylesheets/academy/workshops.css
@@ -37,17 +37,6 @@
 	color: black !important;
 }
 
-.information_show_workshop span {
-	color: black;
-	font-size: 16px;
-	font-weight: bold;
-}
-
-.information_show_workshop {
-    margin-top: 2%;
-	font-size: 12px;
-}
-
 #process-separator {
 	color: #eff2f7;
 	width: 100%;
@@ -83,33 +72,12 @@
     font-weight: normal;
 }
 
-.information_show_data {
-	margin-bottom: 5px;
-	padding-left: 7%;
-	padding-right: 7%;
-	font-family: "Oswald";
-}
-
-.information_show_data span {
-	margin-left: 13%;
-}
-
-.information_left {
-	padding-left: 5%;
-	padding-right: 5%;
-}
-
-.information_left span {
-	margin-left: 7%;
-}
-
-
 .information_workshop {
 	font-size: 12px;
 	margin-top: 10px;
 }
 
-.information_title{
+.information_title {
 	font-family: "Oswald";
   	font-weight: normal;
 	color: black;
@@ -118,37 +86,59 @@
 }
 
 .information_data {
-	margin: 10px 10px 10px 10px;
 	font-family: "Oswald";
     font-weight: normal;
-    font-size: 12px;
+    font-size: 14px;
+    width: 100%;
 }
 
-.information_workshop span {
-	font-size: 14px;
+.information_top, .information_bottom {
+	margin-top: 10px;
+	width: 100%;
+    text-align: center;
 }
 
-.information_data span {
-	font-size: 15px;
+.information_top div, .information_bottom div {
+    display: inline-block;
+    text-align: left;
 }
 
-#tutorial-footer {
+.information_top div {
+    margin-right: 25px;
+}
+
+.information_top div:last-child {
+    margin-right: 0;
+}
+
+.information_bottom div {
+    margin-right: 20px;
+}
+
+.information_bottom div:last-child {
+    margin-right: 0;
+}
+
+.information_bottom {
+	padding-bottom: 20px;
+	border-bottom: 1px solid #eff2f7;
+}
+
+#workshop-footer {
 	height: 55px;
 }
 
-.button_back{
-	float: right;
-    margin-top: 1%;
-    margin-right: 2%;
+#workshop-footer div>div {
+	vertical-align: middle;
+}
+
+.button_back {
+	float: left !important;
 }
 
 .fields_workshop{
 	height: 15px;
 	width: auto;
-}
-
-.information_left_info span{
-	margin-left: 10%;
 }
 
 .workshop_inscription_title p {
