--- a/app/assets/stylesheets/select2.css
+++ b/app/assets/stylesheets/select2.css
@@ -30,7 +30,7 @@ Version: 3.4.0 Timestamp: Tue May 14 08:27:33 PDT 2013
 
 .select2-container .select2-choice {
     display: block;
-    height: 26px;
+    height: 34px; /*26px;*/
     padding: 0 0 0 8px;
     overflow: hidden;
     position: relative;
