--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -103,7 +103,7 @@
 <div class="panel panel-default">
   <div class="panel-heading" style="background-color: #d2322d; border-radius: 4px 4px 4px 4px;">
     <h4 class="panel-title">
-      <%= fa_icon "lock" %> <a href="/admin/ads"> Danger-Zone</a>
+      <%= fa_icon "lock" %> <a href="/admin/dashboard"> Administração</a>
     </h4>
   </div>
 </div>
