--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,17 +17,11 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
     <ul class="nav navbar-nav navbar-right">
-      
-      <%= form_tag "/ads", :method => "get",:class=>"navbar-form navbar-left input-group", :id => "search" do %>
-              <%= text_field_tag :search, params[:search],:class => "form-control typeahead" ,:style=>"vertical-align: center;",:autocomplete => "off",:id=>"search_query"  %>
+        <%= form_tag "/ads", :method => "get",:class=>"navbar-form navbar-left input-group", :id => "search" do %>
+              <%= text_field_tag :search, params[:search],:class => "form-control typeahead" ,:style=>"vertical-align: center;",:autocomplete => "off",:id=>"search_query",:placeholder=>"O que procura?"  %>
              <input type="hidden" class="span1" name="IdControl" id="IdControl" value="" />
-
-              <span class="input-group-btn">
-                <input value="Pesquisar" type="hidden" class="btn btn-default" id="omnisearch-btn" >
-              </span>
+               
        <% end %>
-      <!-- END SEARCH -->
-
 
       <!-- NOTIFICACOES -->
       <% if user_signed_in? %>
@@ -80,12 +74,28 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" style="padding-top:9px; padding-bottom:9px;" data-toggle="dropdown" >
             <!--<% image_tag current_user.avatar.url%>-->
-            <span><%= image_tag current_user.avatar.url(:medium), style:"height:35px; " %></span>
+            <span><%= image_tag current_user.avatar.url(:medium), style:"height:35px; " %>
+              <% if @notification_messages.size > 0 %>
+                <span class="badge" id="custom-badge">1</span>
+              <% end %>
+            </span>
             <!--<span><%= image_tag current_user.avatar.url(:tiny) %></span>-->
+
             <b class="caret" id="dropCarret"></b>
           </a>
 
           <ul class="dropdown-menu">
+              <% @notification_messages.each do |notification| %>
+                
+                <li class="preview">
+                  <a href="<%= message_path(notification.id_destination, :notification => notification) %>">
+                    <small class="type"><%= notification.description %></small><br>
+                    <span class="name">Tem uma nova mensagem</span>
+                    <span class="time"><i class="icon-time"></i>4:59PM<% time_ago_in_words(notification.created_at) %></span>
+                  </a>
+                </li>
+              <% end %>
+              <li class="divider"></li>
 
             <!-- Messages -->
             <% if !@last_message.nil? %>
@@ -101,8 +111,9 @@
               <%end%>
               <li><a href="#">Ver Mais <span class="badge"><%= (@last_message.count - 3) %></span></a></li>
             <% else %>
-              <li class="preview"><span class="name"><i class="fa fa-envelope-o"></i>Sem Mensagens</span><br /></li>
-              <li class="divider"></li>
+              <li class="preview">
+                <span class="name"> &nbsp; <i class="fa fa-envelope-o"></i>  Sem Mensagens</span><br /></li>
+                <li class="divider"></li>
               <li>
                   <%= link_to "Caixa de Mensagens", messages_path %>
               </li>
