--- a/app/views/layouts/_header_ads_notification.html.erb
+++ b/app/views/layouts/_header_ads_notification.html.erb
@@ -5,9 +5,9 @@
 
 <%# place the number of notifications avaiable %>
   <% if number_notifications_ads > 0 %>
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags" id="fa-tags"></i><span class="badge" id="custom-badge"><%= number_notifications_ads %></span><b class="caret" id="dropCarret"></b></a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Mercado"><i class="fa fa-tags" id="fa-tags"></i><span class="badge" id="custom-badge"><%= number_notifications_ads %></span><b class="caret" id="dropCarret"></b></a>
   <% else %>
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags" id="fa-tags"></i><b class="caret" id="dropCarret"></b></a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Mercado"><i class="fa fa-tags" id="fa-tags"></i><b class="caret" id="dropCarret"></b></a>
   <% end %>
 
 
