--- a/app/views/academy/answers/_form_aux.html.erb
+++ b/app/views/academy/answers/_form_aux.html.erb
@@ -27,9 +27,7 @@
 </div>
 
 <div class="fields">
-  <button type="button" class="btn btn-primary" onclick="location.href='<%= academy_answers_path %>'">
-    <span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar
-  </button>
+  <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar'.html_safe, academy_questions_path, class: "btn btn-primary"%>
   <div class="actions" style="float:right">
     <div class="actions" style="float:right">
           <%= f.submit "Publicar", :class => "btn btn-info" %>
